--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "sanitizer": "^0.1.3",
     "screenfull": "^5.2.0",
     "secp256k1": "^3.7.1",
+    "snarkjs": "^0.7.5",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.6",
     "stun": "^1.3.1",
