--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel": "^6.23.0",
     "base-58": "0.0.1",
     "bintrees": "^1.0.2",
+    "bip39": "^3.1.0",
     "blake3": "^2.1.7",
     "body-parser": "^1.19.0",
     "buffer-xor": "^2.0.2",
