--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cropperjs": "^1.6.2",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
+    "decimal.js": "^10.5.0",
     "dompurify": "^2.3.5",
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
